Add french to the dashboard and cleanup unused translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -20,6 +20,7 @@
 	"account.config": "Configuració del compte",
 	"account.consuming": "Processament",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
+	"account.create_nua_key": "Creeu una nova clau d'API de comprensió de Nuclia",
 	"account.day_left": "Queda 1 dia",
 	"account.days_left": "Queden {{days}} dies",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
@@ -37,10 +38,16 @@
 	"account.delete_account_confirm": "Vull eliminar el compte {{account}} i totes les dades que conté.",
 	"account.delete_account_confirm_title": "Eliminar el compte?",
 	"account.delete_account_warning_1": "Si suprimiu el compte {{account}} , se suprimiran totes les dades existents",
+	"account.delete_account_warning_2": "el compte i qualsevol assignació de dades de configuració, usuaris i rols",
+	"account.delete_account_warning_3": "qualsevol caixa de coneixement i totes les seves dades. Inclou dades indexades a NucliaDB",
+	"account.delete_account_warning_4": "qualsevol model entrenat de qualsevol caixa de coneixement",
 	"account.delete_user": "Vols suprimir l'usuari?",
 	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
+	"account.edit_nua_key": "Editeu la clau de l'API de comprensió de Nuclia",
+	"account.email_info": "Correu electrònic de contacte associat a la clau",
 	"account.enhanced_model": "Model millorat",
+	"account.existing_keys": "Claus existents",
 	"account.expired": "Expirada",
 	"account.extend_trial": "Ampliar prova gratuïta",
 	"account.free_trial": "Prova gratuïta",
@@ -282,6 +289,7 @@
 	"generic.announce": "Informació de l'usuari",
 	"generic.authentication_token": "Token d'autenticació",
 	"generic.back": "Enrere",
+	"generic.back_to_accounts": "Tornar a Comptes",
 	"generic.back_to_home": "Tornar a la Home",
 	"generic.by_relevance": "per rellevància",
 	"generic.cancel": "Cancel·lar",
@@ -303,9 +311,11 @@
 	"generic.deleting": "S'està suprimint",
 	"generic.description": "Descripció",
 	"generic.deselect_all": "desseleccionar-ho tot",
+	"generic.disabled": "Desactivat",
 	"generic.download": "Descarregar",
 	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Editar",
+	"generic.enabled": "Habilitat",
 	"generic.error.oops": "Vaja! Alguna cosa ha fallat!",
 	"generic.expand_info": "desplegar tota la informació",
 	"generic.find_it": "Troba'l",
@@ -319,7 +329,7 @@
 	"generic.manage_account": "Gestió del compte",
 	"generic.member": "Member",
 	"generic.name": "Nom",
-	"generic.named-entities": "Entitats anomenades",
+	"generic.named-entities": "NER",
 	"generic.next": "Següent",
 	"generic.next_step": "Següent pas",
 	"generic.no": "No",
@@ -340,6 +350,7 @@
 	"generic.reindexing": "Reprocessant els recursos",
 	"generic.relevance": "Rellevància",
 	"generic.report_bug": "Notificar un error",
+	"generic.reset": "Restablir",
 	"generic.resource_list": "Llistat de recursos",
 	"generic.restore": "Restablir",
 	"generic.result": "Resultat",
@@ -428,29 +439,29 @@
 	"modal.upload.queue_length": "Mida de la cua",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
-	"ner-add-entity-dialog.title": "Afegeix entitats amb nom",
+	"ner-add-entity-dialog.title": "Afegeix NER",
 	"ner-family-dialog.family-color": "Color de la família NER",
 	"ner-family-dialog.family-color-placeholder": "Color hexadecimal (#ffdd1a)",
 	"ner-family-dialog.family-name": "Títol de la família Ner",
-	"ner-family-dialog.ner-list": "Entitats anomenades",
-	"ner-family-dialog.ner-list-help": "Entitats amb nom separades per comes",
+	"ner-family-dialog.ner-list": "NER",
+	"ner-family-dialog.ner-list-help": "NER separats per comes",
 	"ner-family-dialog.ner-list-title": "Introduïu manualment la llista d'entitats anomenades",
 	"ner-family-dialog.new-family-title": "Crea una família d'entitats amb nom",
 	"ner-family-dialog.upload-csv-button": "Seleccioneu CSV",
 	"ner-family-dialog.upload-csv-format": "Format CSV esperat: una columna amb una entitat anomenada per fila.",
 	"ner-family-dialog.upload-csv-title": "Carregueu un fitxer CSV",
-	"ner-family-toolbar.add-button": "Afegeix una entitat amb nom",
-	"ner-family-toolbar.edit-button": "Edita la família d'entitats amb nom",
-	"ner-family-toolbar.remove-button": "Suprimeix la família d'entitats amb nom",
+	"ner-family-toolbar.add-button": "Afegeix NER",
+	"ner-family-toolbar.edit-button": "Edita la família NER",
+	"ner-family-toolbar.remove-button": "Suprimeix la família NER",
 	"ner-list.add-duplicate-tooltip": "Afegeix com a duplicat de",
 	"ner-list.delete-entity-tooltip": "Suprimeix l'entitat",
 	"ner-list.duplicates": "Duplicats",
 	"ner-list.duplicates-of": "Duplicats de",
 	"ner-list.remove-duplicate-tooltip": "Sortiu dels duplicats",
-	"ner-management.add-family": "Família de l'entitat",
-	"ner-management.page-description": "Creeu la vostra pròpia llista d'entitats amb nom, personalitzeu-les i, a continuació, entreneu-les. Podeu carregar-los des d'un fitxer CSV per accelerar el procés o introduir totes les entitats anomenades manualment.",
-	"ner-management.page-title": "Gestió d'entitats denominades",
-	"ner-remove-family-dialog.description": "Si suprimiu una família d'entitats amb nom, ja no podreu anotar recursos amb ella. Però les anotacions ja fetes amb entitats d'aquesta família encara seran visibles als vostres recursos.",
+	"ner-management.add-family": "Família NER",
+	"ner-management.page-description": "Creeu la vostra pròpia llista de NER, personalitzeu-los i, a continuació, entreneu-los. Podeu carregar-los des d'un fitxer CSV per accelerar el procés o introduir tots els NER manualment.",
+	"ner-management.page-title": "Gestió NER",
+	"ner-remove-family-dialog.description": "Si suprimiu una família NER, ja no podreu anotar recursos amb ella. Però les anotacions ja fetes amb entitats d'aquesta família encara seran visibles als vostres recursos.",
 	"ner-remove-family-dialog.title": "Confirmeu que voleu suprimir \"{{familyName}}\"?",
 	"pastanaga.calendar.invalid-format": "Format de data no vàlid (format esperat: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mesos",
@@ -468,7 +479,10 @@
 	"profile.password_changed": "S'ha modificat la contrasenya",
 	"profile.repeat_password": "Repeteix la contrasenya",
 	"profile.select_language": "Selecciona l’idioma preferent",
+	"quickstart.become_master": "Fes-te un expert!",
+	"quickstart.complete_steps": "Completeu els passos següents per aprofitar al màxim les funcions de Nuclia!",
 	"quickstart.completed_tasks": "Tasques completades",
+	"quickstart.go": "Va",
 	"quickstart.pending_tasks": "Tasques pendents",
 	"quickstart.remaining_tasks": "{{num}} Tasques restants",
 	"quickstart.title": "Inici ràpid",
@@ -597,20 +611,7 @@
 	"search.title.semanticresults": "Resultat semàntic",
 	"search.type_of_document": "Tipus de document",
 	"search.type_of_results": "Tipus de resultats",
-	"setup.account_name_not_available": "Aquest nom de compte no està disponible. Prova'n un altre.",
-	"setup.account_preferences": "1. Comencem amb les preferències del teu compte",
-	"setup.account_validated": "El teu compte ha estat validat",
-	"setup.create_account": "Hola {{user}}! Benvingut! 👋 😄",
-	"setup.data_storage": "On vols allotjar les teves dades ?",
-	"setup.kb_created": "TODO",
-	"setup.knowledge_box_creation": "Es crearà una Caixa de coneixament amb el mateix nom per a guardar tota la documentació vinculada que pugis. Serà processada amb la zona i proveïdor escollit.",
-	"setup.name_account": "Tria el nom del teu compte",
-	"setup.name_account_placeholder": "Nom del compte",
-	"setup.push_data": "2. Puja dades",
 	"setup.set_password": "Estableix la contrasenya",
-	"setup.soon_more_areas": "Més zones per escollir properament",
-	"setup.upload_file": "Puja un arxiu",
-	"setup.upload_using_api": "Puja dades amb l'API",
 	"standalone.nua-key-status.invalid": "La clau de l'API NUA proporcionada no és vàlida",
 	"standalone.nua-key-status.loading-error": "S'ha produït un error en carregar l'estat de la clau de l'API NUA",
 	"standalone.nua-key-status.not-provided": "No s'ha proporcionat cap clau de l'API NUA",
@@ -629,18 +630,22 @@
 	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la caixa de coneixament.",
 	"stash.confirm_delete_user.title": "Estas segur que vols eliminar aquest usuari?",
 	"stash.contact_admin": "No esteu autoritzat per crear un quadre de coneixement. Contacta amb el teu administrador.",
+	"stash.create.anonymization_model.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos del Knowledge Box",
+	"stash.create.anonymization_model.label": "Anonimatització",
 	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la caixa de coneixement. Torneu-ho a intenta, sius plau",
 	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
 	"stash.create.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
 	"stash.create.generative_model.label": "Generació de respostes",
 	"stash.create.in_progress": "Creació de la caixa de coneixement en curs...",
 	"stash.create.semantic_model.help": "Indiqueu els idiomes utilitzats a la informació que penjareu a la vostra KB.",
+	"stash.create.semantic_model.label": "Idiomes",
 	"stash.create.title": "Crea una caixa de coneixement",
 	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
 	"stash.create.visual_labeling.label": "Anotar per selecció",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
 	"stash.create_service_access": "Crea un nou Service Access",
 	"stash.delete.delete": "Eliminar caixa de coneixement?",
+	"stash.delete.error": "Error en crear el quadre de coneixement",
 	"stash.delete.warning": "Si borres la Caixa de Coneixement {{ kb }} també s'esborraran totes les dades que conté.",
 	"stash.delete_stash": "Eliminar caixa de coneixement",
 	"stash.delete_stash_data": "Elimina la caixa de coneixament i totes les dades que conté",
@@ -651,8 +656,6 @@
 	"stash.email": "Servidor de correu",
 	"stash.empty_kb": "La caixa de coneixement encara està buida!",
 	"stash.enable_stash_email": "Habilitar correu electrònic",
-	"stash.entities.custom_entities": "Entitats personalitzades",
-	"stash.entities.named_entities": "Entitats detectades",
 	"stash.home.link": "Tauler d'inici",
 	"stash.home.recent_added": "Continguts nous",
 	"stash.home.tags.title": "Gràfica de distribució de tags",
@@ -663,14 +666,18 @@
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
 	"stash.name": "Nom de la Caixa",
+	"stash.name_your_kb": "Anomena el teu KB",
 	"stash.new_service_access_token": "Crear un nou token",
+	"stash.no_knowledge_boxes": "No hi ha cap cas de coneixement en aquest compte",
 	"stash.preferences.receive_help": "Rebre ajuda",
 	"stash.preferences.receiving_emails": "Preferències del correu electrònic",
 	"stash.profile": "Configuració",
 	"stash.publish.confirm": "Publicar la caixa de coneixement significa que es farà pública i serà accessible per qualsevol persona del món. També podrà ser indexada pels cercadors públics tipus Google. ",
+	"stash.publish.error": "Error en publicar el Knowledge Box",
 	"stash.publish.publish": "Fer pública la Caixa de Coneixement",
 	"stash.publish.title": "Publicar la caixa de coneixement",
 	"stash.publish.warning": "Si publiques la Caixa de Coneixement \"{{ kb }}\" faràs pública tota la informació que conté.",
+	"stash.retire.error": "S'ha produït un error en anul·lar la publicació del Knowledge Box",
 	"stash.retire.retire": "Fer privada la Caixa de Coneixment ",
 	"stash.retire.warning": "Si despubliques la Caixa de Coneixement \"{{ kb }}\" fas privada tota la informació que conté.",
 	"stash.search": "Cerca ",
@@ -705,6 +712,7 @@
 	"stash.settings.processes.training.stop": "Deixa d'entrenar",
 	"stash.settings.processes.training.time_requirement": "El temps necessari per entrenar és d'unes {{hours}} hores que es restaran de les hores disponibles.",
 	"stash.side.activity": "Registre d'activitat",
+	"stash.side.api_keys": "Tecles API",
 	"stash.side.audit": "Auditoria",
 	"stash.side.classification": "Classificació",
 	"stash.side.list": "Llistat recursos",
@@ -778,8 +786,12 @@
 	"stash.widgets.warning-dangerous-snippet-details": "No utilitzeu aquest fragment en un lloc web públic.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Començar",
+	"stats.processing_time": "Temps de processament",
+	"stats.total.fields": "Camps",
+	"stats.total.paragraphs": "Paràgrafs",
 	"stats.total.sentences": "Vectors",
 	"stats.total.title": "Recursos",
+	"stats.total_search": "Total d'operacions de cerca",
 	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
 	"synonyms.add-form.main-word-label": "Paraula principal",
 	"synonyms.add-form.synonyms-label": "Sinònims separats per comes",
@@ -792,8 +804,6 @@
 	"synonyms.table.main-word": "Paraula principal",
 	"synonyms.table.search": "Cerca un sinònim",
 	"synonyms.table.synonyms": "Sinònims",
-	"tasks.credits.title": "Cicles disponibles",
-	"tasks.credits.upgrade": "Adquirir més cicles",
 	"training.history": "Historial d'entrenaments",
 	"training.status.failed": "Error",
 	"training.status.header": "Estat",
@@ -835,5 +845,6 @@
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
 	"user.logout": "Sortir",
 	"validation.name_required": "Introdueix el nom i cognoms",
-	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)"
+	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)",
+	"widget.show-api": "Mostra el punt final de l'API"
 }
