--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -77,7 +77,6 @@
 	"account.nua_webhook_help": "Once your data is processed, the result is posted to this URL",
 	"account.public": "Public",
 	"account.related_kbs": "Account’s Knowledge Boxes",
-	"account.renewal": "Processing consumption renews monthly",
 	"account.replace_config": "Replace settings",
 	"account.settings": "Account preferences",
 	"account.speech_to_text": "Speech-to-text",
@@ -334,7 +333,7 @@
 	"generic.manage_account": "Manage account",
 	"generic.member": "Member",
 	"generic.name": "Name",
-	"generic.named-entities": "Named entities",
+	"generic.named-entities": "NER",
 	"generic.next": "Next",
 	"generic.next_step": "Next step",
 	"generic.no": "No",
@@ -444,29 +443,29 @@
 	"modal.upload.queue_length": "Queue length",
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
-	"ner-add-entity-dialog.title": "Add named entities",
+	"ner-add-entity-dialog.title": "Add NER",
 	"ner-family-dialog.family-color": "NER family color",
 	"ner-family-dialog.family-color-placeholder": "Hexadecimal color (#ffdd1a)",
 	"ner-family-dialog.family-name": "NER family title",
-	"ner-family-dialog.ner-list": "Named entities",
-	"ner-family-dialog.ner-list-help": "Named entities comma-separated",
+	"ner-family-dialog.ner-list": "NER",
+	"ner-family-dialog.ner-list-help": "NER comma-separated",
 	"ner-family-dialog.ner-list-title": "Enter named entity list manually",
 	"ner-family-dialog.new-family-title": "Create named entity family",
 	"ner-family-dialog.upload-csv-button": "Select CSV",
 	"ner-family-dialog.upload-csv-format": "Expected CSV format: one column with one named entity per row.",
 	"ner-family-dialog.upload-csv-title": "Upload a CSV file",
-	"ner-family-toolbar.add-button": "Add named entity",
-	"ner-family-toolbar.edit-button": "Edit named entity family",
-	"ner-family-toolbar.remove-button": "Delete named entity family",
+	"ner-family-toolbar.add-button": "Add NER",
+	"ner-family-toolbar.edit-button": "Edit NER family",
+	"ner-family-toolbar.remove-button": "Delete NER family",
 	"ner-list.add-duplicate-tooltip": "Add as duplicate of",
 	"ner-list.delete-entity-tooltip": "Delete entity",
 	"ner-list.duplicates": "Duplicates",
 	"ner-list.duplicates-of": "Duplicates of",
 	"ner-list.remove-duplicate-tooltip": "Move out of duplicates",
-	"ner-management.add-family": "Entity family",
-	"ner-management.page-description": "Create your own list of named entities, customize them, and then train them. You can upload them from a CSV file for speeding up the process, or enter all the named entities manually.",
-	"ner-management.page-title": "Named entities management",
-	"ner-remove-family-dialog.description": "If you delete a named entities family, you won't be able to annotate resources with it anymore. But annotations already made with entities from this family will still be visible on your resources.",
+	"ner-management.add-family": "NER family",
+	"ner-management.page-description": "Create your own list of NER, customize them, and then train them. You can upload them from a CSV file for speeding up the process, or enter all the NER manually.",
+	"ner-management.page-title": "NER management",
+	"ner-remove-family-dialog.description": "If you delete a NER family, you won't be able to annotate resources with it anymore. But annotations already made with entities from this family will still be visible on your resources.",
 	"ner-remove-family-dialog.title": "Are you sure you want to delete \"{{familyName}}\"?",
 	"pastanaga.calendar.invalid-format": "Invalid date format (expected format: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Months",
@@ -616,20 +615,7 @@
 	"search.title.semanticresults": "Semantic result",
 	"search.type_of_document": "Type of document",
 	"search.type_of_results": "Type of results",
-	"setup.account_name_not_available": "Account name already exists.",
-	"setup.account_preferences": "1. Let’s start with your account preferences",
-	"setup.account_validated": "Your account was validated",
-	"setup.create_account": "Hi {{user}}! Welcome! 👋 😄",
-	"setup.data_storage": "Where do you want to host your data?",
-	"setup.kb_created": "A <strong>Knowledge box</strong> — where indexing data is stored — will be created.",
-	"setup.knowledge_box_creation": "We will create a Knowledge Box using your account’s name. It will be used to store initial data. Data will be processed in the zone you select.",
-	"setup.name_account": "Name your account",
-	"setup.name_account_placeholder": "Name the account",
-	"setup.push_data": "2. Push data",
 	"setup.set_password": "Set your password",
-	"setup.soon_more_areas": "More areas coming soon",
-	"setup.upload_file": "Upload a file",
-	"setup.upload_using_api": "Upload using the API",
 	"standalone.nua-key-status.invalid": "NUA API key provided is invalid",
 	"standalone.nua-key-status.loading-error": "Error while loading NUA API key status",
 	"standalone.nua-key-status.not-provided": "No NUA API key provided",
@@ -674,8 +660,6 @@
 	"stash.email": "Email server",
 	"stash.empty_kb": "The knowledge box is empty",
 	"stash.enable_stash_email": "Enable email",
-	"stash.entities.custom_entities": "Personalized named entities",
-	"stash.entities.named_entities": "Detected named entities",
 	"stash.home.link": "Home dashboard",
 	"stash.home.recent_added": "New content",
 	"stash.home.tags.title": "Tag distribution representation",
@@ -824,11 +808,6 @@
 	"synonyms.table.main-word": "Main word",
 	"synonyms.table.search": "Search a synonym",
 	"synonyms.table.synonyms": "Synonyms",
-	"tasks.credits.title": "Available cycles",
-	"tasks.credits.upgrade": "Get more cycles",
-	"toast.information": "Information",
-	"toast.success": "Success",
-	"toast.warning": "Warning",
 	"training.history": "Training history",
 	"training.status.failed": "Error",
 	"training.status.header": "Status",
