--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -20,6 +20,7 @@
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
+	"account.create_nua_key": "Crear una nueva clave API de comprensión de Nuclia",
 	"account.day_left": "Queda 1 día",
 	"account.days_left": "Quedan {{days}} días",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
@@ -37,10 +38,16 @@
 	"account.delete_account_confirm": "Quiero eliminar la cuenta {{account}} y todos los datos que contiene.",
 	"account.delete_account_confirm_title": "Eliminar la cuenta?",
 	"account.delete_account_warning_1": "Eliminar la cuenta {{account}} eliminará todos los datos existentes",
+	"account.delete_account_warning_2": "la cuenta y cualquier dato de configuración, usuarios y asignación de roles.",
+	"account.delete_account_warning_3": "cualquier cuadro de conocimiento y todos sus datos. Incluyendo datos indexados en NucliaDB",
+	"account.delete_account_warning_4": "cualquier modelo entrenado de cualquier caja de conocimiento",
 	"account.delete_user": "¿Eliminar usuario?",
 	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
+	"account.edit_nua_key": "Editar la clave API de comprensión de Nuclia",
+	"account.email_info": "Correo electrónico de contacto asociado a la clave",
 	"account.enhanced_model": "Modelo mejorado",
+	"account.existing_keys": "Claves existentes",
 	"account.expired": "Expirada",
 	"account.extend_trial": "Ampliar Prueba gratis",
 	"account.free_trial": "Prueba gratis",
@@ -282,6 +289,7 @@
 	"generic.announce": "Informacion del usuario",
 	"generic.authentication_token": "Token de autenticación",
 	"generic.back": "Volver",
+	"generic.back_to_accounts": "Volver a Cuentas",
 	"generic.back_to_home": "Volver a la Home",
 	"generic.by_relevance": "por relevancia",
 	"generic.cancel": "Cancelar",
@@ -303,9 +311,11 @@
 	"generic.deleting": "Borrando",
 	"generic.description": "Descripción",
 	"generic.deselect_all": "deseleccionar todo",
+	"generic.disabled": "Discapacitados",
 	"generic.download": "Descargar",
 	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Edit",
+	"generic.enabled": "Activado",
 	"generic.error.oops": "Ups! Algo ha ido mal!",
 	"generic.expand_info": "desplegar toda la información",
 	"generic.find_it": "Encuéntralo ",
@@ -319,7 +329,7 @@
 	"generic.manage_account": "Gestionar la cuenta",
 	"generic.member": "Member",
 	"generic.name": "Nombre",
-	"generic.named-entities": "Entidades nombradas",
+	"generic.named-entities": "NER",
 	"generic.next": "Siguiente",
 	"generic.next_step": "Siguiente paso",
 	"generic.no": "No",
@@ -340,6 +350,7 @@
 	"generic.reindexing": "Reprocesando los recursos",
 	"generic.relevance": "Relevancia",
 	"generic.report_bug": "Notificar un error",
+	"generic.reset": "Reiniciar",
 	"generic.resource_list": "Listado de recursos",
 	"generic.restore": "Restablecer",
 	"generic.result": "Resultado",
@@ -428,29 +439,29 @@
 	"modal.upload.queue_length": "Tamaño de la cola",
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
-	"ner-add-entity-dialog.title": "Agregar entidades nombradas",
+	"ner-add-entity-dialog.title": "Añadir NER",
 	"ner-family-dialog.family-color": "Color de la familia NER",
 	"ner-family-dialog.family-color-placeholder": "Color hexadecimal (#ffdd1a)",
 	"ner-family-dialog.family-name": "Título de la familia NER",
-	"ner-family-dialog.ner-list": "Entidades nombradas",
-	"ner-family-dialog.ner-list-help": "Entidades nombradas separadas por comas",
+	"ner-family-dialog.ner-list": "NER",
+	"ner-family-dialog.ner-list-help": "NER separados por comas",
 	"ner-family-dialog.ner-list-title": "Ingrese la lista de entidades nombradas manualmente",
 	"ner-family-dialog.new-family-title": "Crear familia de entidades con nombre",
 	"ner-family-dialog.upload-csv-button": "Seleccione CSV",
 	"ner-family-dialog.upload-csv-format": "Formato CSV esperado: una columna con una entidad nombrada por fila.",
 	"ner-family-dialog.upload-csv-title": "Subir un archivo CSV",
-	"ner-family-toolbar.add-button": "Agregar entidad nombrada",
-	"ner-family-toolbar.edit-button": "Editar familia de entidades con nombre",
-	"ner-family-toolbar.remove-button": "Eliminar familia de entidad nombrada",
+	"ner-family-toolbar.add-button": "Añadir NER",
+	"ner-family-toolbar.edit-button": "Editar la familia NER",
+	"ner-family-toolbar.remove-button": "Suprimir la familia NER",
 	"ner-list.add-duplicate-tooltip": "Añadir como duplicado de",
 	"ner-list.delete-entity-tooltip": "Eliminar entidad",
 	"ner-list.duplicates": "Duplicados",
 	"ner-list.duplicates-of": "Duplicados de",
 	"ner-list.remove-duplicate-tooltip": "Salir de duplicados",
-	"ner-management.add-family": "Familia de entidades",
-	"ner-management.page-description": "Cree su propia lista de entidades con nombre, personalícelas y luego entrénelas. Puede cargarlos desde un archivo CSV para acelerar el proceso o ingresar todas las entidades nombradas manualmente.",
-	"ner-management.page-title": "Gestión de entidades nombradas",
-	"ner-remove-family-dialog.description": "Si elimina una familia de entidades con nombre, ya no podrá anotar recursos con ella. Pero las anotaciones ya realizadas con entidades de esta familia seguirán estando visibles en sus recursos.",
+	"ner-management.add-family": "Familia NER",
+	"ner-management.page-description": "Crea tu propia lista de NER, personalízalos y luego capacítalos. Puede cargarlos desde un archivo CSV para acelerar el proceso o ingresar todos los NER manualmente.",
+	"ner-management.page-title": "Gestión NER",
+	"ner-remove-family-dialog.description": "Si elimina una familia NER, ya no podrá anotar recursos con ella. Pero las anotaciones ya realizadas con entidades de esta familia seguirán siendo visibles en sus recursos.",
 	"ner-remove-family-dialog.title": "¿Seguro que quieres eliminar \"{{familyName}}\"?",
 	"pastanaga.calendar.invalid-format": "Formato de fecha no válido (formato esperado: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Meses",
@@ -468,7 +479,10 @@
 	"profile.password_changed": "El password has dido cambiado",
 	"profile.repeat_password": "Reptie la contraseña",
 	"profile.select_language": "Selecciona idioma",
+	"quickstart.become_master": "¡Conviértete en un experto!",
+	"quickstart.complete_steps": "¡Complete los pasos a continuación para aprovechar al máximo las funciones de Nuclia!",
 	"quickstart.completed_tasks": "Tareas completadas",
+	"quickstart.go": "Ir",
 	"quickstart.pending_tasks": "Tareas pendientes",
 	"quickstart.remaining_tasks": "{{num}} Tareas restantes",
 	"quickstart.title": "Inicio rápido",
@@ -597,20 +611,7 @@
 	"search.title.semanticresults": "Resultado semántico",
 	"search.type_of_document": "Tipo de documento",
 	"search.type_of_results": "Tipo de resultados",
-	"setup.account_name_not_available": "Este nombre de cuenta no está disponible. Prueba con otro.",
-	"setup.account_preferences": "1. Empezamos con las preferencias de tu cuenta",
-	"setup.account_validated": "Tu cuenta ha sido validada",
-	"setup.create_account": "Hola {{user}}! Bienvenido! 👋 😄",
-	"setup.data_storage": "¿Done quieres alojar tus datos ?",
-	"setup.kb_created": "TODO",
-	"setup.knowledge_box_creation": "Se creará una Caja de conocimiento con el mismo nombre para guardar toda la documentación vinculada que subas. Será procesada con la zona y proveedor escogido.",
-	"setup.name_account": "Elige el nombre de tu cuenta",
-	"setup.name_account_placeholder": "Nombre de la cuenta",
-	"setup.push_data": "2. Sube datos",
 	"setup.set_password": "Establece tu contraseña",
-	"setup.soon_more_areas": "Más zonas para escoger próximamente",
-	"setup.upload_file": "Sube un archivo",
-	"setup.upload_using_api": "Sube datos con la API",
 	"standalone.nua-key-status.invalid": "La clave API NUA proporcionada no es válida",
 	"standalone.nua-key-status.loading-error": "Error al cargar el estado de la clave API de NUA",
 	"standalone.nua-key-status.not-provided": "No se proporcionó ninguna clave API NUA",
@@ -629,18 +630,22 @@
 	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la caja de conocimiento.",
 	"stash.confirm_delete_user.title": "¿Estás seguro de que deseas eliminar este usuario?",
 	"stash.contact_admin": "No está autorizado para crear un cuadro de conocimiento. Póngase en contacto con su administrador.",
+	"stash.create.anonymization_model.help": "Aplicar la anonimización conforme al Reglamento General de Protección de Datos (GDPR) a todos los recursos en el Cuadro de Conocimiento",
+	"stash.create.anonymization_model.label": "Anonimización",
 	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la caja de conocimiento. Por favor vuelve a intentarlo.",
 	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
 	"stash.create.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
 	"stash.create.generative_model.label": "Generación de respuesta",
 	"stash.create.in_progress": "Creación de la caja de conocimiento en curso...",
 	"stash.create.semantic_model.help": "Indica los idiomas utilizados en la información que subirás en tu KB.",
+	"stash.create.semantic_model.label": "Idiomas",
 	"stash.create.title": "Crea una caja de conocimiento",
 	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
 	"stash.create.visual_labeling.label": "Anotar por selección",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta caja de conocimiento. De forma predeterminada aparece la zona escogida en el Account",
 	"stash.create_service_access": "Crea un nuevo Service Access",
 	"stash.delete.delete": "¿Eliminar caja de conocimiento?",
+	"stash.delete.error": "Error al crear el cuadro de conocimiento",
 	"stash.delete.warning": "Si eliminas la Caja de Conocimiento {{ kb }} también se eliminaran todos los datos que contenga",
 	"stash.delete_stash": "Borrar caja de conocimiento",
 	"stash.delete_stash_data": "Elimina la caja de conocimiento y todos los datos que contiene",
@@ -651,8 +656,6 @@
 	"stash.email": "Servidor de correo",
 	"stash.empty_kb": "!La caja de conocimiento aun está vacía!",
 	"stash.enable_stash_email": "Habilitar correo electrónico",
-	"stash.entities.custom_entities": "Entidades personalizadas",
-	"stash.entities.named_entities": "Entidades detectadas",
 	"stash.home.link": "Panel de inicio",
 	"stash.home.recent_added": "Nuevos contenidos",
 	"stash.home.tags.title": "Gráfica de distribución de tags",
@@ -663,14 +666,18 @@
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gestionar usuarios",
 	"stash.name": "Nombre de la Caja",
+	"stash.name_your_kb": "Nombra tu base de conocimiento",
 	"stash.new_service_access_token": "Crear un nuevo token",
+	"stash.no_knowledge_boxes": "No hay cajas de conocimiento en esta cuenta.",
 	"stash.preferences.receive_help": "Recibir ayuda",
 	"stash.preferences.receiving_emails": "Preferencias del correo electrónico",
 	"stash.profile": "Ajustes",
 	"stash.publish.confirm": "Publicar una caja de conocimiento significa que será accesible para cualquier persona en el mundo. También significa que podría ser indexada por motores de búsqueda públicos como Google.",
+	"stash.publish.error": "Error al publicar el Knowledge Box",
 	"stash.publish.publish": "Publicar la Caja de Conocimiento",
 	"stash.publish.title": "Publicar la caja de conocimiento",
 	"stash.publish.warning": "Si publicas la Caja de Conocimiento \"{{ kb }}\" toda la información que contiene se hará pública.",
+	"stash.retire.error": "Error al despublicar el Knowledge Box",
 	"stash.retire.retire": "Hacer privada la Caja de Conocimiento",
 	"stash.retire.warning": "Si despublicas la Caja de Conocimiento \"{{ kb }}\", toda la información que contiene será privada. ",
 	"stash.search": "Busca",
@@ -705,6 +712,7 @@
 	"stash.settings.processes.training.stop": "Dejar de entrenar",
 	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
 	"stash.side.activity": "Registro de actividad",
+	"stash.side.api_keys": "Claves de api",
 	"stash.side.audit": "Auditoría",
 	"stash.side.classification": "Clasificación",
 	"stash.side.list": "Listado de recursos",
@@ -778,6 +786,9 @@
 	"stash.widgets.warning-dangerous-snippet-details": "No utilice este fragmento en un sitio web público.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Empezar",
+	"stats.processing_time": "Tiempo de procesamiento",
+	"stats.total.fields": "Campos",
+	"stats.total.paragraphs": "Los párrafos",
 	"stats.total.sentences": "Vectores",
 	"stats.total.title": "Recursos",
 	"stats.total_search": "Total operaciones de búsqueda",
@@ -793,8 +804,6 @@
 	"synonyms.table.main-word": "Palabra principal",
 	"synonyms.table.search": "Buscar un sinónimo",
 	"synonyms.table.synonyms": "Sinónimos",
-	"tasks.credits.title": "Ciclos disponibles",
-	"tasks.credits.upgrade": "Adquirir más ciclos",
 	"training.history": "Historial de entrenamientos",
 	"training.status.failed": "Error",
 	"training.status.header": "Estado",
@@ -836,5 +845,6 @@
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
 	"user.logout": "Salir",
 	"validation.name_required": "Añade tu nombre y apellidos",
-	"validation.url_required": "Introduce una URL válida (por ejemplo https://nuclia.com)"
+	"validation.url_required": "Introduce una URL válida (por ejemplo https://nuclia.com)",
+	"widget.show-api": "Mostrar punto final de API"
 }
