--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -758,6 +758,8 @@
 	"stash.widgets.filter_type": "Filter types",
 	"stash.widgets.hideSources.help": "Hide sources used to generate the answer",
 	"stash.widgets.hideSources.label": "Hide sources",
+	"stash.widgets.hideThumbnails.help": "Hide thumbnails in search results",
+	"stash.widgets.hideThumbnails.label": "Hide thumbnails",
 	"stash.widgets.hint_1": "For the correct reading of the results, the width of the search bar should not be less than 384px.",
 	"stash.widgets.hint_2": "If your search page background color isn't neutral, remember to add a background color on your search box to make it easier to read.",
 	"stash.widgets.labels": "Filter by labels",
