--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -622,7 +622,7 @@
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.option.cohere": "Cohérer (bêta)",
 	"stash.config.option.generative-multilingual-2023": "Modèle privé multilingue Nuclia",
-	"stash.config.option.multilingual-2023-08-16": "multiligual (alpha)",
+	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.palm": "Google PaLM 2 (bêta)",
 	"stash.config.own_key": "Utiliser sa propre clé",
 	"stash.confirm_delete_user.description": "La seule façon d’annuler cette action est de les inviter à nouveau à rejoindre votre boîte de connaissances.",
