--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -15,7 +15,7 @@
 	"login.email_sent": "On vous a envoyé un email!",
 	"login.email_signup": "Email professionnel",
 	"login.email_signup_help": "Seuls les emails d'entreprise sont autorisés",
-	"login.error.auth_error": "Erreur d'authentification",
+	"login.error.auth_error": "Erreur d'authentification.",
 	"login.error.get_consent_error": "Une erreur s'est produite lors de la récupération des informations relatives au consentement",
 	"login.error.google_workspace": "L'inscription avec Google est limitée aux domaines professionnels, désolé.",
 	"login.error.login_error": "Une erreur s'est produite lors de la connexion",
